# agda-dependencies

./: LICENSE  README.md  agda-deps.cabal  flake.nix
nix/: souffle-haskell.cabal.patch
src/: Main.hs
test/: Bool.agda  List.agda  Nat.agda  Test.agda  Test.txt
